# modified_packages

./: .gitignore  README.md
axis_camera/launch/: axis_dual.launch
axis_camera/nodes/: axis.py  axis_ptz.py
axis_camera_modified/: CMakeLists.txt  README.md  package.xml
axis_camera_modified/calibration/: axis_480p.yaml  axis_720p.yaml
axis_camera_modified/launch/: axis_dual.launch  axis_modified.launch
espeleo_pose_ekf/: CMakeLists.txt  README.md  missing_pieces.txt  package.xml
espeleo_pose_ekf/include/espeleo_pose_ekf/: odom_estimation.h  odom_estimation_node.h
espeleo_pose_ekf/launch/: ekf_tfs_ufmg.launch  espeleo_pose_ekf.launch
espeleo_pose_ekf/scripts/: ekf_broadcaster_ufmg.py
espeleo_pose_ekf/scripts/old/: pitch_to_z_axis.py  pose_to_odom.py
espeleo_pose_ekf/src/: nonlinearanalyticconditionalgaussianodo.cpp  odom_estimation.cpp  odom_estimation_node.cpp
imu_complementary_filter/launch/: imu_veloso.launch
imu_complementary_filter/src/: gyracc_to_imu.py
imu_complementary_filter_modified/: CMakeLists.txt  package.xml
imu_complementary_filter_modified/include/imu_complementary_filter_modified/: complementary_filter_ros.h  complementary_filter_ros_modified.h
imu_complementary_filter_modified/src/: complementary_filter.cpp  complementary_filter_node.cpp  complementary_filter_ros.cpp  complementary_filter_ros_modified.cpp
lego_nxt_modified/: README.md
lego_nxt_modified/libusb-0.1.12/: Makefile  config.status  libtool  libusbpp.la
lego_nxt_modified/libusb-0.1.12/.deps/: descriptors.Plo  error.Plo  linux.Plo  usb.Plo  usbpp.Plo
lego_nxt_modified/libusb-0.1.12/.libs/: libusb-0.1.so.4.4.4  libusbpp-0.1.so.4.4.4
lego_nxt_modified/libusb-0.1.12/doc/: Makefile
lego_nxt_modified/libusb-0.1.12/tests/: Makefile  descriptor_test  driver_name  find_hubs  find_mice  get_resolution  hub_strings  id_test  testlibusb
point_cloud_converter/launch/: cloud_compare.launch  cloud_compare_new.launch  cloud_pcd_simple.launch
realsense-ros_modified/: CMakeLists.txt  package.xml
realsense-ros_modified/realsense2_camera/: CMakeLists.txt  package.xml
realsense-ros_modified/realsense2_description/: CMakeLists.txt  package.xml
realsense-ros_modified/scripts/: rs_t265_depth.py
robot_pose_ekf/launch/: robot_pose_ekf.launch  robot_pose_ekf_imu.launch  robot_pose_ekf_modified.launch
robot_pose_ekf/scripts/: pitch_to_z_axis.py  pose_to_odom.py
robot_pose_ekf_modified/: CMakeLists.txt  package.xml
robot_pose_ekf_modified/scripts/: add_covariance.py  change_input.py  change_output.py
rtabmap_ros/config/: espeleo_ufmg.yaml
rtabmap_ros/launch/: espeleo_rtabmap.launch  espeleo_rtabmap2.launch  espeleo_rtabmap_indirect.launch
rtabmap_ros/scripts/: rtab_broadcaster.py  topic_repub.py
rtabmap_test/: CMakeLists.txt  espeleo_rtabmap.launch  espeleo_rtabmap_indirect.launch  espeleo_rtabmap_odom.launch  espeleo_rtabmap_veloso1.launch  oak_image_filtering.cpp  oak_rtabmap.launch  package.xml  rtab_broadcaster.py  rtab_to_init.py  rtabmap_test.launch  rtabmapviz.launch  topic_repub.py
usb_cam/launch/: usb_cam-test.launch
usb_cam/nodes/: usb_cam_node.cpp
(+28 files in other folders)
