<package>

  <name>espeleo_pose_ekf</name>
  <version>1.0.0</version>

  <description>
    Package with a Extended Kalman Filter used to estimate the 6D pose of EspeleoRobô. This is a modified version of robot_pose_ekf (version 1.14.5 - 2019-04-04).
  </description>

  <maintainer email="rafaelfernandesgsilva@hotmail.com">Rafael Fernandes</maintainer>

  <license>BSD</license>

    <buildtool_depend version_gte="0.5.68">catkin</buildtool_depend>

    <build_depend>message_generation</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>bfl</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>message_generation</build_depend>

    <run_depend>message_runtime</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>bfl</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>nav_msgs</run_depend>
    <run_depend>tf</run_depend>

    <test_depend>rosbag</test_depend>
    <test_depend>rostest</test_depend>

</package>
